--- a/pages/index.html
+++ b/pages/index.html
@@ -4,17 +4,19 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
     <!-- Firebase script -->
-    <script src="/javascript/firebase.js"></script>
+    <script src="../javascript/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -33,7 +35,7 @@
 
     <script>
         $(function () {
-            $("#nav-placeholder").load("/pages/nav.html");
+            $("#nav-placeholder").load("nav.html");
         });
     </script>
     <!--end of Navigation bar-->
@@ -44,7 +46,7 @@
         <span>We are so awesome with many destinations</span><br>
         <span>Much wow this is so cool</span><br>
         <span>Woff</span><br>
-        <a href="pages/bali.html" style="width: auto" class="btn btn-dark">Destinations</a>
+        <a href="bali.html" style="width: auto" class="btn btn-dark">Destinations</a>
     </div>
 
     <!-- Page Content -->
@@ -122,7 +124,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
     <!-- Firebase script -->
-    <script src="javascript/firebase.js"></script>
+    <script src="../javascript/firebase.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -138,10 +140,8 @@
     <!-- myscript -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
-    <script src="javascript/script.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <script src="../javascript/script.js"></script>
+
 
 </body>
 
