new theme for index

--- a/pages/bergen.html
+++ b/pages/bergen.html
@@ -44,9 +44,9 @@
         </div>
     </nav>
     <section>
-        <img src="/ToBeImportedImages/Bergen/BackLayer.png" id="bg">
-        <img src="/ToBeImportedImages/Bergen/MiddleLayer.png" id="middle">
-        <img src="/ToBeImportedImages/Bergen/FrontLayer.png" id="front">
+        <img src="../ToBeImportedImages/Bergen/BackLayer.png" id="bg">
+        <img src="../ToBeImportedImages/Bergen/MiddleLayer.png" id="middle">
+        <img src="../ToBeImportedImages/Bergen/FrontLayer.png" id="front">
         <h2 id="text">Bergen</h2>
     </section>
     <div class="container-fluid">
