--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/453668cb2b.js" crossorigin="anonymous"></script>
     <title>Travel with Hundré</title>
 </head>
 
@@ -39,16 +41,44 @@
         });
     </script>
     <!--end of Navigation bar-->
+<div class="top-banner"></div>
 
-
-    <div id="BaliDiv" class="main-information">
+    <div class="small-logo">
+        <img src="../images/LogoWhite.png" alt="Hundre logo">
+    </div>
+    <div id="TextDiv" class="main-information">
         <h1></h1>
         <span>We are so awesome with many destinations</span><br>
         <span>Much wow this is so cool</span><br>
         <span>Woff</span><br>
-        <a href="bali.html" style="width: auto" class="btn btn-dark">Destinations</a>
+        <a href="destinations.html" style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;" class="btn btn-dark destination-button">View Destinations</a>
     </div>
-
+<div class="fullscreen-news">
+ <div class="news-carousel">
+ <div>
+    <div class="news-box news-box1">
+        <h1></h1>
+        <p></p>
+        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+    </div>
+</div>
+<div>
+    <div class="news-box news-box2">
+        <h1></h1>
+        <p></p>
+        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+    </div>
+</div>
+<div>
+    <div class="news-box news-box3">
+        <h1></h1>
+        <p></p>
+        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+    </div>
+ </div>
+</div>
+ </div>
+</div>
     <!-- Page Content -->
     <div class="wrapper">
 
@@ -68,7 +98,7 @@
             <div>
                 <div class="card card2">
                     <div class="cardTitle">
-                        <h2 class="title">Czech Republic</h2>
+                        <h2 class="title">Czechia</h2>
                         <h3 class="title">Prague</h3>
                     </div>
                     <div class="content">
@@ -115,7 +145,13 @@
             </div>
         </div>
     </div>
-
+    <div class="social-media">
+        <a href="" class="social-icon"> <i class="fa fa-facebook"></i></a>
+        <a href="" class="social-icon"> <i class="fa fa-twitter"></i></a>
+        <a href="" class="social-icon"> <i class="fa fa-youtube"></i></a>
+        <a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a>
+     
+    </div>
     <div class="footer">
         <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
     </div>
