--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -20,11 +20,11 @@
 </head>
 <body>
 
-
+<div class="top-banner"></div>
 
   <div class="center">
     <div class="banner-logo">
-    <img src="../images/Logo.png" alt="Hundré logo">
+    <img src="../images/LogoWhite.png" alt="Hundré logo">
     </div>
     <div class="filter-area">
       <div class="sort-filter">
