Index fixed all positions with new nav-bar

--- a/pages/nav.html
+++ b/pages/nav.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-dark navbar-expand-md justify-content-center">
-    <a href="index.html" class="navbar-brand d-flex w-50 mr-auto">Hundré</a>
+    <a href="index.html" class="navbar-brand d-flex w-50 mr-auto">
+        <i class="fas fa-home" style="color:goldenrod"></i>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
         <span class="navbar-toggler-icon"></span>
     </button>
