--- a/pages/index.html
+++ b/pages/index.html
@@ -51,7 +51,7 @@
         <span>We are so awesome with many destinations</span><br>
         <span>Much wow this is so cool</span><br>
 <br>
-        <a href="destinations.html" style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;" class="btn btn-dark destination-button">View Destinations</a>
+        <a href="news.html" style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;" class="btn btn-dark destination-button">View Destinations</a>
     </div>
 <div class="fullscreen-news">
  <div class="news-carousel">
@@ -59,21 +59,21 @@
     <div class="news-box news-box1">
         <h1></h1>
         <p></p>
-        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
     </div>
 </div>
 <div>
     <div class="news-box news-box2">
         <h1></h1>
         <p></p>
-        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
     </div>
 </div>
 <div>
     <div class="news-box news-box3">
         <h1></h1>
         <p></p>
-        <a href="destinations.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
     </div>
  </div>
 </div>
