--- a/pages/nav.html
+++ b/pages/nav.html
@@ -3,8 +3,8 @@
         <i class="fas fa-home" style="color:goldenrod"></i>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <i style="color: goldenrod;" class="fas fa-bars"></i>
+        </button>
     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
         <ul class="navbar-nav w-100 justify-content-center">
             <li class="nav-item active">
