added orange sigin in buttons and loginfunction to vote

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,7 @@
         });
     </script>
     <!--end of Navigation bar-->
-<div class="top-banner"></div>
+    <div class="top-banner"></div>
 
     <div class="small-logo">
         <img src="../images/LogoWhite.png" alt="Hundre logo">
@@ -50,35 +50,40 @@
         <h1></h1>
         <span>We are so awesome with many destinations</span><br>
         <span>Much wow this is so cool</span><br>
-<br>
-        <a href="news.html" style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;" class="btn btn-dark destination-button">View Destinations</a>
+        <br>
+        <a href="news.html"
+            style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;"
+            class="btn btn-dark destination-button">View Destinations</a>
     </div>
-<div class="fullscreen-news">
- <div class="news-carousel">
- <div>
-    <div class="news-box news-box1">
-        <h1></h1>
-        <p></p>
-        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
+    <div class="fullscreen-news">
+        <div class="news-carousel">
+            <div>
+                <div class="news-box news-box1">
+                    <h1></h1>
+                    <p></p>
+                    <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; "
+                        class="btn btn-dark destination-button">More news</a>
+                </div>
+            </div>
+            <div>
+                <div class="news-box news-box2">
+                    <h1></h1>
+                    <p></p>
+                    <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; "
+                        class="btn btn-dark destination-button">More news</a>
+                </div>
+            </div>
+            <div>
+                <div class="news-box news-box3">
+                    <h1></h1>
+                    <p></p>
+                    <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; "
+                        class="btn btn-dark destination-button">More news</a>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div>
-    <div class="news-box news-box2">
-        <h1></h1>
-        <p></p>
-        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
     </div>
-</div>
-<div>
-    <div class="news-box news-box3">
-        <h1></h1>
-        <p></p>
-        <a href="news.html" style="width: auto; transform:scale(0.7); background-color: goldenrod; " class="btn btn-dark destination-button">More news</a>
-    </div>
- </div>
-</div>
- </div>
-</div>
     <!-- Page Content -->
     <div class="wrapper">
 
@@ -127,7 +132,7 @@
                     </div>
                     <div class="content">
 
-                        <button class="btn">Visit</button>
+                        <a class="btn" href="tokyo.html">Visit</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +155,7 @@
         <a href="" class="social-icon"> <i class="fa fa-twitter"></i></a>
         <a href="" class="social-icon"> <i class="fa fa-youtube"></i></a>
         <a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a>
-     
+
     </div>
     <div class="footer">
         <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
