--- a/pages/nav.html
+++ b/pages/nav.html
@@ -4,7 +4,7 @@
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
         <i style="color: goldenrod;" class="fas fa-bars"></i>
-        </button>
+    </button>
     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
         <ul class="navbar-nav w-100 justify-content-center">
             <li class="nav-item active">
@@ -31,16 +31,16 @@
             <input id="Email" type="email" placeholder="Email">
             <input id="Password" type="password" placeholder="Password">
 
-            <button id="btnSignIn" style="background: black; color: white; width: 100px;" onclick="signIn()">Log
+            <button id="btnSignIn" style="background: goldenrod; color: white; width: 100px;" onclick="signIn()">Log
                 in</button>
-            <button id="btnSignUp" style="background: black; color: white; width: 100px;" onclick="signUp()">Sign
+            <button id="btnSignUp" style="background: goldenrod; color: white; width: 100px;" onclick="signUp()">Sign
                 up</button>
 
 
         </div>
         <button id="btnSignOut" onclick="signOut()" style="display: none; 
         width: 150px; 
-        background-color: black;
+        background-color: goldenrod;
         color: white">Log out</button>
     </div>
 </nav>
