Fixed all destinations

--- a/pages/london.html
+++ b/pages/london.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bali.css">
+    <link rel="stylesheet" href="../css/london.css">
 
     <title>Document</title>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -48,7 +48,7 @@
 
 
     <div class="small-logo">
-        <img src="../images/BaliLogo.png" alt="Hundre logo">
+        <img src="../images/LondonLogo.png" alt="Hundre logo">
     </div>
 
     <div class="stats">
@@ -88,11 +88,11 @@
     </div>
 
       <div class="image-slide">
-        <div><img src="https://images.unsplash.com/photo-1544644181-1484b3fdfc62?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
-        <div><img src="https://images.unsplash.com/photo-1501179691627-eeaa65ea017c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
-        <div><img src="https://images.unsplash.com/photo-1551751336-07e038f36886?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1289&q=80"></div>
-        <div><img src="https://images.unsplash.com/photo-1503475072824-1dafaf16c41c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
-        <div><img src="https://images.unsplash.com/photo-1557093793-e196ae071479?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1486299267070-83823f5448dd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1515165562839-978bbcf18277?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1491156855053-9cdff72c7f85?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1523590564318-491748f70ea7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
 
     </div>
       
