--- a/pages/tokyo.html
+++ b/pages/tokyo.html
@@ -82,7 +82,8 @@
         </div>
 
       </div>
-      <div class="info-text">
+
+      <div class="info-text text1">
         <p class="city-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
 
@@ -95,10 +96,14 @@
 
     </div>
       
-      <div class="info-text">
+      <div class="info-text text2">
           <p class="city-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
-
+<div class="book-button">
+      <a href="news.html"
+            style="width: auto; background-color: goldenrod;"
+            class="btn btn-dark destination-button">BOOK NOW</a>
+          </div>
       <div class="footer">
         <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
       </div>
