--- a/pages/bergen.html
+++ b/pages/bergen.html
@@ -1,89 +1,136 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="../css/bergen.css">
+
+    <title>Document</title>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+    <!-- Firebase script -->
+    <script src="../javascript/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/bergen.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/453668cb2b.js" crossorigin="anonymous"></script>
     <title>Travel with Hundré</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-md bg-faded justify-content-center">
-        <a href="/" class="navbar-brand d-flex w-50 mr-auto">Hundré</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-            <ul class="navbar-nav w-100 justify-content-center">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/destinations.html">Destinations</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sign in</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <section>
-        <img src="../ToBeImportedImages/Bergen/BackLayer.png" id="bg">
-        <img src="../ToBeImportedImages/Bergen/MiddleLayer.png" id="middle">
-        <img src="../ToBeImportedImages/Bergen/FrontLayer.png" id="front">
-        <h2 id="text">Bergen</h2>
-    </section>
-    <div class="container-fluid">
-        <div class="info-bg">
 
-        </div>
+        <!--Navigation bar-->
+    <div id="nav-placeholder">
+
     </div>
 
-    <script type="text/javascript">
-        let bg = document.getElementById("bg");
-        let middle = document.getElementById("middle");
-        let front = document.getElementById("front");
-        let text = document.getElementById("text");
-
-        window.addEventListener('scroll', function () {
-            var value = window.scrollY;
-
-            bg.style.top = value * 0.15 + 'px';
-            middle.style.top = -value * 0.15 + 'px';
-            front.style.top = -value * 0.60 + 'px';
-            text.style.top = value * 0.80 + 'px';
+    <script>
+        $(function () {
+            $("#nav-placeholder").load("nav.html");
         });
     </script>
+    <!--end of Navigation bar-->
 
-    <!-- myscript -->
-    <script src="javascript/script.js"></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+
+    <div class="top-banner"></div>
+
+
+    <div class="small-logo">
+        <img src="../images/BergenLogo.png" alt="Hundre logo">
+    </div>
+
+    <div class="stats">
+        <div>
+          <div class="wrap-icon wrap-awards">
+            <div class="title">Awards</div>
+            <i class="fa fa-trophy"></i>
+            <div class="value first">15</div>
+          </div>
+        </div>
+        <div>
+            <div class="wrap-icon wrap-shopping">
+          <div class="title">Shopping</div>
+          <i class="fa fa-shopping-bag"></i>
+          <div class="value">3/10</div>
+        </div>
+    </div>
+        <div>
+            <div class="wrap-icon wrap-scenery">
+          <div class="title">Scenery</div>
+          <i class="fa fa-picture-o"></i>
+          <div class="value">10/10</div>
+        </div>
+        </div>
+        <div>
+        <div class="wrap-icon wrap-weather">
+          <div class="title">Weather</div>
+          <i class="fa fa-snowflake-o"></i>
+          <div id="tokyoTemperature" class="value infinity">22°C</div>
+        </div>
+        </div>
+
+      </div>
+
+      <div class="info-text text1">
+        <p class="city-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+
+      <div class="image-slide">
+        <div><img src="https://images.unsplash.com/photo-1491302915375-66c4aa5c2237?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1545062479-73020f0a0526?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1544009788-a7c33ddf777a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1539017057261-f78c62780a70?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
+        <div><img src="https://images.unsplash.com/photo-1610816168075-f19d937635f5?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1270&q=80"></div>
+
+    </div>
+      
+      <div class="info-text text2">
+          <p class="city-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+<div class="book-button">
+      <a href="news.html"
+            style="width: auto; background-color: goldenrod;"
+            class="btn btn-dark destination-button">BOOK NOW</a>
+          </div>
+      <div class="footer">
+        <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
+      </div>
+
+     <!-- The core Firebase JS SDK is always required and must be listed first -->
+     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+     <!-- Firebase script -->
+     <script src="../javascript/firebase.js"></script>
+ 
+     <!-- Optional JavaScript -->
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+         crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+         crossorigin="anonymous"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+         crossorigin="anonymous"></script>
+     <!-- myscript -->
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
+     <script src="../javascript/script.js"></script>
+ 
+ 
 </body>
 
 </html>
