--- a/pages/index.html
+++ b/pages/index.html
@@ -96,7 +96,8 @@
                     </div>
                     <div class="content">
 
-                        <button class="btn">Visit</button>
+                        <a href="" style="width: auto;"
+                        class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
             </div>
@@ -108,7 +109,8 @@
                     </div>
                     <div class="content">
 
-                        <button class="btn">Visit</button>
+                        <a href="" style="width: auto;"
+                        class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +122,8 @@
                     </div>
                     <div class="content">
 
-                        <button class="btn">Visit</button>
+                        <a href="" style="width: auto;"
+                        class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +135,8 @@
                     </div>
                     <div class="content">
 
-                        <a class="btn" href="tokyo.html">Visit</a>
+                        <a href="tokyo.html" style="width: auto;"
+                        class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +148,8 @@
                     </div>
                     <div class="content">
 
-                        <button class="btn">Visit</button>
+                        <a href="" style="width: auto;"
+                        class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
             </div>
