added navigation from Index

--- a/pages/index.html
+++ b/pages/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="content">
 
-                        <a href="" style="width: auto;"
+                        <a href="bergen.html" style="width: auto;"
                         class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="content">
 
-                        <a href="" style="width: auto;"
+                        <a href="prague.html" style="width: auto;"
                         class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="content">
 
-                        <a href="" style="width: auto;"
+                        <a href="bali.html" style="width: auto;"
                         class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="content">
 
-                        <a href="" style="width: auto;"
+                        <a href="london.html" style="width: auto;"
                         class="btn btn-dark destination-button">Visit</a>
                     </div>
                 </div>
