Fixed filterbug and some navigation

--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -85,9 +85,12 @@
               <div id="bergen" class="like-heart" onclick="incrementValue(this.id)">
                 <i id="bergenHeart" class="fa fa-heart" aria-hidden="true"></i>
               </div>
-
             </div>
-
+            <div class="card-button">
+            <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+              <span class="glyphicon glyphicon-search"></span> Visit
+            </a>
+          </div>
             <div class="stats">
               <div>
                 <div class="wrap-icon">
@@ -140,6 +143,11 @@
               </div>
 
             </div>
+            <div class="card-button">
+              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+                <span class="glyphicon glyphicon-search"></span> Visit
+              </a>
+            </div>
             <div class="stats">
               <div>
                 <div class="wrap-icon">
@@ -190,6 +198,11 @@
                 <i id="baliHeart" class="fa fa-heart" aria-hidden="true"></i>
               </div>
 
+            </div>
+            <div class="card-button">
+              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+                <span class="glyphicon glyphicon-search"></span> Visit
+              </a>
             </div>
             <div class="stats">
               <div>
@@ -243,6 +256,12 @@
               </div>
 
             </div>
+
+            <div class="card-button">
+              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+                <span class="glyphicon glyphicon-search"></span> Visit
+              </a>
+            </div>
             <div class="stats">
               <div>
                 <div class="wrap-icon">
@@ -294,6 +313,12 @@
                 <i id="londonHeart" class="fa fa-heart" aria-hidden="true"></i>
               </div>
 
+            </div>
+
+            <div class="card-button">
+              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+                <span class="glyphicon glyphicon-search"></span> Visit
+              </a>
             </div>
             <div class="stats">
               <div>
