--- a/pages/index.html
+++ b/pages/index.html
@@ -51,7 +51,7 @@
         <span>We are so awesome with many destinations</span><br>
         <span>Much wow this is so cool</span><br>
         <br>
-        <a href="news.html"
+        <a href="destinations.html"
             style="width: auto; align-items: center; background-color: goldenrod; transform: scale(0.8); margin-top: 0; margin-left: -6%;"
             class="btn btn-dark destination-button">View Destinations</a>
     </div>
