--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -2,47 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/destinations.css">
-    <title>Hundré Destinations</title>
-     <!-- The core Firebase JS SDK is always required and must be listed first -->
-     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
-     <!-- Firebase script -->
-    <script src="/javascript/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="/javascript/cities.js"></script>
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
-          <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/destinations.css">
+  <title>Hundré Destinations</title>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+  <!-- Firebase script -->
+  <script src="/javascript/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="/javascript/cities.js"></script>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
-     <!--Font-Awesome-->
-     <script src="https://kit.fontawesome.com/453668cb2b.js" crossorigin="anonymous"></script>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
+  <!--Font-Awesome-->
+  <script src="https://kit.fontawesome.com/453668cb2b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
- <!--Navigation bar-->
- <div id="nav-placeholder">
+  <!--Navigation bar-->
+  <div id="nav-placeholder">
 
-</div>
+  </div>
 
-<script>
+  <script>
     $(function () {
-        $("#nav-placeholder").load("nav.html");
+      $("#nav-placeholder").load("nav.html");
     });
-</script>
-<!--end of Navigation bar-->
-<div class="top-banner"></div>
-<div class="banner-logo">
-  <img src="../images/LogoWhite.png" alt="Hundré logo">
+  </script>
+  <!--end of Navigation bar-->
+  <div class="top-banner"></div>
+  <div class="banner-logo">
+    <img src="../images/LogoWhite.png" alt="Hundré logo">
   </div>
   <div class="center">
-  
+
     <div class="filter-area">
       <div class="sort-filter">
         <p>Sort by</p>
@@ -63,7 +63,8 @@
         <input type="checkbox" id="beer" onclick="checkboxChecked(this.id)">
         <i class="fas fa-beer"></i>
 
-        <button type="submit" style="background-color:goldenrod; height:30px" class="btn btn-secondary btn-sm" onclick="applyFilter()">Apply</button>
+        <button type="submit" style="background-color:goldenrod; height:30px" class="btn btn-secondary btn-sm"
+          onclick="applyFilter()">Apply</button>
 
       </div>
     </div>
@@ -87,10 +88,10 @@
               </div>
             </div>
             <div class="card-button">
-            <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
-              <span class="glyphicon glyphicon-search"></span> Visit
-            </a>
-          </div>
+              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+                <span class="glyphicon glyphicon-search"></span> Visit
+              </a>
+            </div>
             <div class="stats">
               <div>
                 <div class="wrap-icon">
@@ -144,7 +145,7 @@
 
             </div>
             <div class="card-button">
-              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+              <a href="prague.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Visit
               </a>
             </div>
@@ -200,7 +201,7 @@
 
             </div>
             <div class="card-button">
-              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+              <a href="bali.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Visit
               </a>
             </div>
@@ -258,7 +259,7 @@
             </div>
 
             <div class="card-button">
-              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+              <a href="tokyo.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Visit
               </a>
             </div>
@@ -316,7 +317,7 @@
             </div>
 
             <div class="card-button">
-              <a href="bergen.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
+              <a href="london.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Visit
               </a>
             </div>
@@ -357,28 +358,28 @@
       <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
     </div>
   </div>
-    
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
-    <!-- Firebase script -->
-    <script src="../javascript/firebase.js"></script>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <!-- myscript -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
-    <script src="../javascript/script.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+  <!-- Firebase script -->
+  <script src="../javascript/firebase.js"></script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <!-- myscript -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
+  <script src="../javascript/script.js"></script>
 
 </body>
 
