final touches DONEZO

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@
             <div class="map">
                 <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
                         src="https://maps.google.com/maps?q=fabriksgatan%207&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                        frameborder="0"></iframe><a href="https://123movies-to-org.blogspot.com"></a><br>
+                        frameborder="0"></iframe><br>
                 </div>
             </div>
             </div>
