--- a/pages/london.html
+++ b/pages/london.html
@@ -88,6 +88,10 @@
     </div>
 
       <div class="image-slide">
+        <div> <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4963.641388944005!2d-0.12999217099565866!3d51.534848492316975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b10c73c4dcd%3A0x616f11fed05d6bb9!2sKings%20Cross%2C%20London%2C%20Storbritannien!5e0!3m2!1ssv!2sse!4v1613657847056!5m2!1ssv!2sse"
+          frameborder="0"></iframe><br>
+        </div></div>
         <div><img src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1486299267070-83823f5448dd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1515165562839-978bbcf18277?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
