--- a/pages/prague.html
+++ b/pages/prague.html
@@ -88,6 +88,11 @@
     </div>
 
       <div class="image-slide">
+        <div> <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2559.9605793751048!2d14.418517815934557!3d50.08702492136519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b94e939c02f49%3A0xf17b44b25aa20696!2sAstronomiska%20uret%20i%20Prag!5e0!3m2!1ssv!2sse!4v1613657777836!5m2!1ssv!2sse"
+          frameborder="0"></iframe><br>
+        </div></div>
+
         <div><img src="https://images.unsplash.com/photo-1541849546-216549ae216d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1514412076816-d228b5c0973c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1560950340-5e6064fce41a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
