--- a/pages/tokyo.html
+++ b/pages/tokyo.html
@@ -88,6 +88,10 @@
     </div>
 
       <div class="image-slide">
+        <div> <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3854.259091776406!2d139.697184289054!3d35.67619795276948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cb79a4c26e5%3A0x8fca893849103f73!2sMeiji-templet!5e0!3m2!1ssv!2sse!4v1613657378189!5m2!1ssv!2sse"
+          frameborder="0"></iframe><br>
+        </div></div>
         <div><img src="https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1371&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1551641506-ee5bf4cb45f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1362&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1490806843957-31f4c9a91c65?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
@@ -104,7 +108,10 @@
             style="width: auto; background-color: goldenrod;"
             class="btn btn-dark destination-button">BOOK NOW</a>
           </div>
-      <div class="footer">
+
+         
+
+          <div class="footer">
         <p>Copyright Ⓒ 2021 Hundré. All Rights Reserved. </p>
       </div>
 
