--- a/pages/bali.html
+++ b/pages/bali.html
@@ -88,6 +88,12 @@
     </div>
 
       <div class="image-slide">
+
+        <div> <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7885.015934640157!2d115.08993597667748!3d-8.83220717299417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd24ffc20cb8191%3A0xcb98d1ba7db0495!2sUluwatu%20Temple!5e0!3m2!1ssv!2sse!4v1613658096449!5m2!1ssv!2sse"
+          frameborder="0"></iframe><br>
+        </div></div>
+
         <div><img src="https://images.unsplash.com/photo-1544644181-1484b3fdfc62?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1501179691627-eeaa65ea017c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1551751336-07e038f36886?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1289&q=80"></div>
