--- a/pages/bergen.html
+++ b/pages/bergen.html
@@ -88,6 +88,13 @@
     </div>
 
       <div class="image-slide">
+        
+        <div> <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7885.6185392248535!2d5.321210350302476!3d60.38899441512228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfea43b3317d3%3A0x583d19ca7af47f9!2sSentrum%2C%20Bergen%2C%20Norge!5e0!3m2!1ssv!2sse!4v1613657973566!5m2!1ssv!2sse"
+          frameborder="0"></iframe><br>
+        </div></div>
+
+       
         <div><img src="https://images.unsplash.com/photo-1491302915375-66c4aa5c2237?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1545062479-73020f0a0526?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80"></div>
         <div><img src="https://images.unsplash.com/photo-1544009788-a7c33ddf777a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80"></div>
